[gd_scene load_steps=3 format=3 uid="uid://bdbck84c1ev2y"]

[ext_resource type="Script" uid="uid://csaeh08julhw5" path="res://Scripts/Menus/Main/creditMenu.gd" id="1_flrgi"]
[ext_resource type="Texture2D" uid="uid://er2nokye48pw" path="res://Sprites/Credits/deco/placeholder_drapeCurtain.png" id="2_8ptkw"]

[node name="creditMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flrgi")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.710741, 0.710741, 0.710741, 1)

[node name="plateContainer" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -298.0
offset_right = 550.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="Display" type="HBoxContainer" parent="plateContainer"]
custom_minimum_size = Vector2(1100, 500)
layout_mode = 2

[node name="plateNext" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 34.5
offset_top = -112.0
offset_right = 109.5
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
text = "Next"

[node name="platePrev" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.5
offset_top = -112.0
offset_right = -34.5
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
text = "Previous"

[node name="plateBack" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -64.0
offset_right = 37.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Curtain" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -337.5
offset_bottom = 337.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_8ptkw")

[node name="Curtain2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -337.5
offset_right = 230.0
offset_bottom = 337.5
grow_vertical = 2
texture = ExtResource("2_8ptkw")
flip_h = true

[connection signal="pressed" from="plateNext" to="." method="_scroll_next"]
[connection signal="pressed" from="platePrev" to="." method="_scroll_back"]
